<resources>
    <string name="app_name">Patient</string>
    <string name="action_settings">Settings</string>
    <string name="check_login">Please check your e-mail and password</string>
    <string name="press_again_to_exit">Press again to close ReceptionApp</string>
    <string name="not_valid_email">Please enter valid email id</string>
    <string name="out_of_memory">Out Of Memory</string>
    <string name="not_sufficient_permissions">Not sufficient permissions \n Goto Settings></string>
    <string name="permissionss">>Permissions</string>
    <string name="choose_image_source">Choose Image Resource</string>
    <string name="please_relaunch">"Please relaunch "</string>
    <string name="check_gps">Location Update has encountered a problem. Please Check GPS is ON or OFF</string>
    <string name="gps">" - GPS"</string>
    <string name="this_device_is_not_supported">This Device is not supported</string>
    <string name="problem_connecting_to_the_server">Problem connecting to server,please try later.</string>
    <string name="connecting_to_internet">" Problem connecting to internet,please try again."</string>
    <string name="connection_failed">" Connection failed,please try again."</string>
    <string name="bad_request">" Bad request,please try again."</string>
    <string name="not_found_please">" Not found,please try again."</string>
    <string name="session_timeout_redirecting">Session timeout, Redirecting to login</string>
    <string name="request_timeout_slow_connection">"Request Timeout. Maybe due to slow connection"</string>
    <string name="request_timeout_unknown_host">"Request Timeout. due to unknown host"</string>
    <string name="netwrk_status">Network Status</string>
    <string name="retry">Retry</string>
    <string name="press_one_more_time">Press one more time to push app into background</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an Account? Sign Up</string>
    <string name="send">Send</string>
    <string name="a_link_has">A link has been send to your email   please check and reset your password</string>
    <string name="success_msg">Success</string>
    <string name="soemthing_went_wrong">Somethong went wrong</string>
    <string name="all_log_clear_successfully">All Logs Clear Successfully</string>
    <string name="retry_caps">RETRY</string>
    <string name="exit_caps">EXIT</string>
    <string name="close">Close</string>
    <string name="demo_expired">Demo Expired</string>
    <string name="contact_company_info">Please contact : shiv@toxsl.com</string>
    <string name="total_errors">Total error :</string>
    <string name="snapshot_saved">Snapshot saved into gallery</string>
    <string name="permission_denied_ex_strorage">Permission denied to read your External storage</string>
    <string-array name="drawer_items">
        <item>Find a Medical Professional</item>
        <item>Appointments</item>
        <item>Activities</item>
        <item>Payments &amp; Subscription</item>
        <item>Documents</item>
        <item>Health Tips</item>
        <item>Invite A Friend</item>
        <item>About Signal A Doc</item>
        <item>Settings</item>

    </string-array>
    <string name="blood_group">Blood Group</string>
    <string name="error">Restfull error</string>
    <string name="api_is_in_maintenance">Api is in maintenance</string>
    <string name="api_is_expired">Api is in Expired</string>
    <string name="retry_cap">RETRY</string>
    <string name="login_failed">Login failed</string>
    <string name="location_permission_not_specified">Location Permission not specified</string>
    <string name="gps_not_enabled">Gps not enabled</string>
    <string name="not_connected_to_internet">Not connected to Internet</string>
    <string name="poor_internet_connection">Poor internet connection</string>
    <string name="view_profile">View Profile</string>
    <string name="please_wait">Please wait</string>
    <string name="after_permission">after permission</string>
    <string name="passwod">Password</string>
    <string name="email_aaddress">Email address</string>
    <string name="welcome_back">WELCOME BACK</string>
    <string name="new_to_signaladoc">New to SignalADoc? </string>
    <string name="signaladoc">Signal A Doc</string>
    <string name="continue_with_google">   Continue with Google</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="lets_set_you_op_for_the_best_nhealthcare_experiencr">Lets set you up for the best \nhealthcare experience</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="female">Female</string>
    <string name="country">Country</string>
    <string name="blood_type">Blood Type</string>
    <string name="any_medical_condition">Any medical condition?</string>
    <string name="area_of_speciization">Areas of Specialization</string>
    <string name="by_creating_an_account_you_agree_to_our">By creating an account you agree to our</string>
    <string name="term_of_services_and_privacy_policy">Term of Services and Privacy Policy</string>
    <string name="already_have_an_account_sign_in">Already have an account? </string>
    <string name="address">Address</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="get_started">get started</string>
    <string name="get_access_to_a_pool_of_medical_n_professionals_at_anytime">Get access to a pool of medical professionals at anytime</string>
    <string name="chat_call_video_or_audio_and_have_a_consultation_with_a_medical_professional">Chat, call (video or audio) and have a consultation with a Medical Professional.</string>
    <string name="we_simplify_your_access_to_good_healthcare">We simplify your access \nto good healthcare</string>
    <string name="add_card">ADD CARD</string>
    <string name="thank_you_for_signing_up_to_signal_a_doc">Thank you for signing up to Signal A Doc.  </string>
    <string name="add_your_card_to_have_a_smooth_experience_with_signal_a_doc">Add your card to have a smooth \nexperience with Signal A Doc.</string>
    <string name="signal_a_doc_does_not_store_your_card_information">Signal A Doc does not store your card information</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="cvv">CVV</string>
    <string name="signal_a_doctor">Signal a Doctor</string>
    <string name="medical_nprofessional">Medical \nProfessional</string>
    <string name="signal_a_doc">SIGNAL A DOC</string>
    <string name="categories"> TOP CATEGORIES</string>
    <string name="and_get_real_time_medical_assistance">and get real-time medical assistance</string>
    <string name="view_availability">VIEW AVAILABILITY</string>
    <string name="about_me">ABOUT ME</string>
    <string name="rate_dr_adewale_shitu">Rate Dr. Adewale Shitu</string>
    <string name="available_time_slot">Available time slot</string>
    <string name="available_appointments">Available appointments</string>
    <string name="available_doctors">Available doctors</string>
    <string name="schdule_appointment">  SCHDULE APPOINTMENT</string>
    <string name="face_to_face_consulation">Face to Face Consultation</string>
    <string name="cough">Cough</string>
    <string name="genral_symptoms">GENRAL SYMPTOMS</string>
    <string name="fatigue_weakness">Fatigue/weakness</string>
    <string name="shortness_of_breath">Shortness of breath</string>
    <string name="palpitations">Palpitations</string>
    <string name="decreased_excercise_tolerance">Decreased exercise tolerance</string>
    <string name="chest_pressure_pain">Chest pressure / pain</string>
    <string name="wheezing">Wheezing</string>
    <string name="sputum_productive_cogh_phlegm">Sputum / productive cogh /phlegm</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="thermometer_location">Thermometer Location</string>
    <string name="temprature">Temprature</string>
    <string name="please_do_not_guess_use_a_thermometer">Please do not guess Use a thermometer.</string>
    <string name="what_is_your_current_ntemprature">What is your Current\nTemperature?</string>
    <string name="reschedule">reschedule</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="view_more_details">View more details</string>
    <string name="detail">details</string>
    <string name="filter_by_medical_proffesion">Filter by medical Proffesion</string>
    <string name="add_a_new_card">+ ADD NEW CARD</string>
    <string name="payment_method">PAYMENT METHOD</string>
    <string name="delete_card">Delete Card</string>
    <string name="added_on">Added On</string>
    <string name="primary_card">Primary Card</string>
    <string name="are_you_sure_you_want_to_n_delete_this_payment_card">Are you sure you want to  delete this payment card?</string>
    <string name="how_long_have_you_n_felt_this_way">How long have you \n felt this way?</string>
    <string name="days">Days</string>
    <string name="edit">EDIT</string>
    <string name="security">SECURITY</string>
    <string name="change_password">Change Password</string>
    <string name="save_changes">Save changes</string>
    <string name="medical_condition">Medical condition</string>
    <string name="medical_conditions">Medical conditions</string>
    <string name="tap_to_add">Tap to add</string>
    <string name="no_medical_condition_provided">No medical condition provided</string>
    <string name="my_details">My details</string>
    <string name="medical_info">Medical Info</string>
    <string name="health_profile">Health profile</string>
    <string name="fertility_doctor">Fertility Doctor</string>
    <string name="dentist">Dentist</string>
    <string name="general_practional">General Practitional</string>
    <string name="eye_doctor">Eye Doctor</string>
    <string name="search_for_a_medical_category_or_professio">Search for a medical professional</string>
    <string name="card_added">Card Added</string>
    <string name="your_card_was_added_successfully">Your card was added successfully</string>
    <string name="let_us_no_your_email_and_we_will_send_you_a_link_to_reset_it">Let us no your email and we will\n send you a link to reset it</string>
    <string name="home">Home</string>
    <string name="appointments">Appointments</string>
    <string name="professionals">Professionals</string>
    <string name="account">Account</string>
    <string name="continue_">Continue</string>
    <string name="sign_in">Sign in</string>
    <string name="mcontinue">Continue</string>
    <string name="i_remember_my_password_now">I remember my password now.</string>
    <string name="bank_details">Bank details</string>
    <string name="lets_set_you_up_so_you_can_start_helping_out">Lets set you up so you can start helping out</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="bank">Bank</string>
    <string name="account_name">Account Name</string>
    <string name="account_number">Account Number</string>
    <string name="account_type">Account Type</string>
    <string name="i_agree_to_the_contract_applicable_to_healthcare_pprofessionals_providing_sevices_on_the_platform">I agree to the contract applicable to Healthcare pprofessionals providing sevices on the platform</string>
</resources>