<?xml version="1.0" encoding="utf-8"?><!--
  ~ @copyright : ToXSL Technologies Pvt. Ltd. < www.toxsl.com >
  ~ @author     : Shiv Charan Panjeta < shiv@toxsl.com >
  ~ All Rights Reserved.
  ~ Proprietary and confidential :  All information contained herein is, and remains
  ~ the property of ToXSL Technologies Pvt. Ltd. and its partners.
  ~ Unauthorized copying of this file, via any medium is strictly prohibited.
  ~
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/DarkBluebg"
        android:orientation="vertical">

        <View
            android:id="@+id/whiteView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_60sdp"
            android:background="@drawable/white_upper_curve_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/backIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:src="@mipmap/ic_back_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_top_logo"
            app:layout_constraintBottom_toBottomOf="@id/backIV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/backIV" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/forgotPassTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/circularstd_black"
            android:letterSpacing="0.1"
            android:lineSpacingExtra="@dimen/_8sp"
            android:text="@string/forgot_password"
            android:textColor="@color/DarkBluebg"
            android:textSize="@dimen/_18sp"
            app:layout_constraintStart_toStartOf="@id/whiteView"
            app:layout_constraintTop_toTopOf="@id/whiteView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/letUsTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/let_us_no_your_email_and_we_will_send_you_a_link_to_reset_it"
            android:textColor="@color/DarkBluebg"
            app:layout_constraintStart_toStartOf="@id/forgotPassTV"
            app:layout_constraintTop_toBottomOf="@+id/forgotPassTV" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/emailET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/email_aaddress"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_15sdp"
            android:singleLine="true"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/letUsTV"
            app:layout_constraintTop_toBottomOf="@+id/letUsTV" />


        <com.signalDoc_patient.utils.CustomButton
            android:id="@+id/continueBT"
            android:layout_width="0dp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/button_blue_shape"
            android:text="@string/continue_"
            android:textColor="@color/White"
            android:textSize="@dimen/_16sp"
            app:layout_constraintEnd_toEndOf="@id/emailET"
            app:layout_constraintStart_toStartOf="@id/emailET"
            app:layout_constraintTop_toBottomOf="@id/emailET" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/rememberTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_50sdp"
            android:layout_marginBottom="@dimen/_50sdp"
            android:text="@string/i_remember_my_password_now"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/signInTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_50sdp"
            android:text="@string/sign_in"
            android:textColor="@color/MediumBlue"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/rememberTV" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>