<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ @copyright : ToXSL Technologies Pvt. Ltd. < www.toxsl.com >
  ~ @author     : Shiv Charan Panjeta < shiv@toxsl.com >
  ~ All Rights Reserved.
  ~ Proprietary and confidential :  All information contained herein is, and remains
  ~ the property of ToXSL Technologies Pvt. Ltd. and its partners.
  ~ Unauthorized copying of this file, via any medium is strictly prohibited.
  ~
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:background="@drawable/dark_blue_bg">
       <androidx.appcompat.widget.AppCompatImageView
           android:id="@+id/bookedIV"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="@dimen/_70sdp"
           android:src="@mipmap/ic_done"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent" />

       <androidx.appcompat.widget.AppCompatTextView
           android:id="@+id/successTV"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="@dimen/_20sdp"
           android:text="@string/card_added"
           android:textColor="@color/MediumBlue"
           android:textSize="@dimen/_30ssp"
           android:textStyle="bold"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/bookedIV" />

       <androidx.appcompat.widget.AppCompatTextView
           android:id="@+id/yourTV"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:text="@string/your_card_was_added_successfully"
           android:textColor="@color/White"
           android:layout_marginTop="@dimen/_10sdp"
           android:textSize="@dimen/_15ssp"
           app:layout_constraintEnd_toEndOf="@id/successTV"
           app:layout_constraintStart_toStartOf="@id/successTV"
           app:layout_constraintTop_toBottomOf="@+id/successTV" />


       <androidx.appcompat.widget.AppCompatButton
           android:id="@+id/continueBT"
           android:layout_width="match_parent"
           android:layout_height="@dimen/_50sdp"
           android:background="@drawable/button_blue_shape"
           android:layout_marginStart="@dimen/_20sdp"
           app:layout_constraintTop_toBottomOf="@+id/yourTV"
           app:layout_constraintEnd_toEndOf="@id/yourTV"
           android:text="@string/mcontinue"
           android:textSize="@dimen/_15ssp"
           android:textColor="@color/White"
           android:layout_marginTop="@dimen/_30sdp"
           android:layout_marginEnd="@dimen/_20sdp"/>


   </androidx.constraintlayout.widget.ConstraintLayout>
</layout>